# Sudoku

./: .clang-format  .gitignore  Makefile  README.md  puzzle.json
coverage/: coverage.sh
include/: generator.h  json.h  logical_solver.h  logical_techniques.h  puzzle_generator.h  solution_generator.h  solver.h  sudoku.h  sudoku_game.h  utils.h
scripts/: coverage.sh  create_technique.py  create_technique.sh
scripts/resources/: header.txt  source.txt  test.txt
src/: CMakeLists.txt  config.h.in  generator.cpp  json.cpp  logical_solver.cpp  logical_techniques.cpp  main.cpp  main.cxx  puzzle_generator.cpp  solution_generator.cpp  solver.cpp  sudoku.cpp  sudoku_game.cpp  utils.cpp
src/generator/: CMakeLists.txt  difficulty.hpp  generator.cxx  generator.h
src/generator/command/: CMakeLists.txt  clear_options.cxx  clear_options.h  command.cxx  command.h  macro_command.cxx  macro_command.h  set_value.cxx  set_value.h
src/generator/initial/: CMakeLists.txt  board_generator.h  exception.cxx  exception.h  generator.h  get_generator.cxx  get_generator.h  recursive.cxx  recursive.h
src/generator/logic/: CMakeLists.txt  candidate_box.cxx  candidate_box.h  candidate_lines.cxx  candidate_lines.h  double_pairs.cxx  double_pairs.h  line_box_view.cxx  line_box_view.h  next_move.cxx  next_move.h  single_candidate.cxx  single_candidate.h  single_position.cxx  single_position.h  technique.cxx  technique.h  technique_enum.hpp
src/generator/removal/: CMakeLists.txt  clear_options.cxx  clear_options.h  command.h  macro_command.cxx  macro_command.h  set_value.cxx  set_value.h
src/sudoku/: CMakeLists.txt  board.cxx  board.h  cell.cxx  cell.h  cell_group.cxx  cell_group.h  cell_group_factory.cxx  cell_group_factory.h  index.cxx  index.h  options.cxx  options.h  position.cxx  position.h  validate.cxx  validate.h  value.cxx  value.h
src/test/: CMakeLists.txt  board.cxx  board_validator.cxx  candidate_box.cxx  candidate_lines.cxx  cell.cxx  cell_group.cxx  cell_group_factory.cxx  commands.cxx  difficulty.cxx  double_pairs.cxx  generator.cxx  index.cxx  initial_board.cxx  line_box_view.cxx  options.cxx  position.cxx  single_candidate.cxx  single_position.cxx  test_utils.cxx  test_utils.h  value.cxx
test/: main.cpp  unittest.h
test/techniques/: candidate_lines.hpp  naked_pair.hpp  single_candidate.hpp  single_position.hpp
